# entity-component-system

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devops/: install.sh  tests.sh
entity_component_system/application/: Application.py  __init__.py
entity_component_system/entities/: Scene.py
entity_component_system/systems/: scene_create.py
tests/: test_create_app.py
