[tool.poetry]
name = "entity-component-system"
version = "0.1.0"
description = ""
authors = ["Cihan Eran <erancihan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
