[tool.poetry]
name = "entity-component-system"
version = "0.1.0"
description = ""
authors = ["Cihan Eran <erancihan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
flake8 = "^6.1.0"
black = "^23.12.1"
pylint = "^3.0.3"
jedi = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
